<resources>
    <string name="app_name">Playground</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="addWish">Add to WishList</string>
    <string name="addCart">Add to Cart</string>
    <string name="noDescription">No Description available</string>
    <string name="seller">Seller: Mobile Shop</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="noAcc">No Account? Click here</string>
    <string name="search_title">Search</string>
    <string name="search_hint">looking for something?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="full_name">Full name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="zip_code">Zip code</string>
    <string name="_977">+977</string>
    <string name="mobile_no">Mobile no.</string>
    <string name="postal_code">Postal code</string>
    <string name="phone_no">Phone no.</string>
    <string name="i_agree_to">I agree to</string>
    <string name="terms_and_privacy">Terms and Privacy</string>
    <string name="register">Register</string>
    <string name="productName">Product</string>
    <string name="price">Price</string>
    <string name="image">Image</string>
    <string name="featured">Featured</string>
    <string name="men_wardrobe">Men\'s Wardrobe</string>
    <string name="women_wardrobe">Women\'s Wardrobe</string>
    <string name="product_code">Product Code: LP-001</string>
    <string name="order_now">Order Now</string>
    <string name="banner_name">Android Studio</string>
    <string name="banner_email">android.studio@android.com</string>
    <string name="delete">Delete</string>
    <string name="profile_name">Profile Name</string>
    <string name="profile_number">profile number</string>
    <string name="saugat_tulipitsolutions_gmail_com">saugat.tulipitsolutions@gmail.com</string>
    <string name="my_cart">My Cart</string>
    <string name="cart_count">10</string>
    <string name="items">items</string>
    <string name="my_wishlist">My WishList</string>
    <string name="Mobiles">Mobile</string>
    <string name="save_change">Save</string>

    <string name="term_of_use">
                    <p align="right"> \tThis document is an electronic record in terms of Information
                    Technology Act, 2000 and rules there under as applicable and the amended provisions pertaining
                    to electronic records in various statutes as amended by the Information Technology Act, 2000.
                    This electronic record is generated by a computer system and does not require any physical or digital signatures.</p>\n

                    <p align="justify"> \t This document is published in accordance with the provisions of Rule 3 (1) of the Information
                    Technology(Intermediaries guidelines) Rules, 2011 that require publishing the rules and regulations, privacy policy
                    and Terms of Use foraccess or usage of www.flipkart.com website.</p>\n

                    <p align="justify"> \t The domain name www.flipkart.com (hereinafter referred to as "Website") is owned by Flipkart Internet
                    Private Limited a company incorporated under the Companies Act, 1956 with its registered office at Vaishnavi Summit,
                    Ground Floor, 7th Main, 80 feet Road, 3rd Block, Koramangala Industrial Layout, Next to Wipro office, Corporation Ward No.
                    68, Koramangala, Bangalore - 560 034, Karnataka, India (hereinafter referred to as "Flipkart").</p>

    </string>
</resources>
