<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_row"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/dp2"
    app:cardElevation="@dimen/dp2"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp250"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/wishList_img"
            android:layout_width="@dimen/dp150"
            android:layout_height="@dimen/dp150"
            android:contentDescription="@string/productName"
            android:src="@drawable/tulipfinal" />

        <TextView
            android:id="@+id/wishList_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/productName"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp15"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/wishList_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@android:color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/dp2"
            android:background="@color/grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp48">

            <ImageView
                android:id="@+id/deleteProduct"
                android:layout_width="@dimen/dp0"
                android:layout_height="@dimen/dp24"
                android:layout_weight="1"
                android:contentDescription="@string/delete"
                android:src="@drawable/deleteicon" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/grey" />

            <ImageView
                android:id="@+id/addToCart"
                android:layout_width="@dimen/dp0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/addCart"
                android:src="@drawable/addicon" />

        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>
