<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp180"
                android:background="@drawable/backaccount">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:src="@drawable/tulipfinal"
                    android:id="@+id/accountImage"
                    android:layout_width="100dp"
                    android:layout_height="96dp"
                    android:layout_centerInParent="true"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:id="@+id/accountName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/transparent"
                android:padding="@dimen/dp8"
                android:text="@string/profile_name"
                android:textSize="@dimen/sp24" />

                <Button
                    android:id="@+id/accountEdit"
                    android:background="@android:color/transparent"
                    android:text="Edit"
                    android:textAllCaps="false"
                    android:layout_alignParentEnd="true"
                    android:layout_width="@dimen/dp50"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <EditText
                android:id="@+id/accountMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="@dimen/dp8"

                android:text="@string/profile_number"
                android:textSize="@dimen/sp16" />

            <EditText
                android:id="@+id/accountEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="@dimen/dp8"
                android:text="@string/email"
                android:textSize="@dimen/sp16" />

            <EditText
                android:id="@+id/accountAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="@dimen/dp8"
                android:text="@string/address"
                android:textSize="@dimen/sp16" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:layout_marginBottom="@dimen/dp8"
                android:layout_marginTop="@dimen/dp8"
                android:background="@color/grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp200">

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp200"
                    android:layout_weight="1"
                    android:elevation="@dimen/dp2"
                    app:cardCornerRadius="@dimen/dp2"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:weightSum="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight=".1"
                            android:text="@string/my_wishlist"
                            android:textSize="@dimen/sp24" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_gravity="center"
                            android:layout_weight="0.75">

                            <TextView
                                android:id="@+id/wishlistCount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/cart_count"
                                android:textSize="@dimen/sp64" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight=".15"
                            android:text="@string/items"
                            android:textSize="@dimen/sp24" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp200"
                    android:layout_weight="1"
                    android:elevation="@dimen/dp2"
                    app:cardCornerRadius="@dimen/dp2"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:weightSum="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight=".1"
                            android:text="@string/my_cart"
                            android:textSize="@dimen/sp24" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_gravity="center"
                            android:layout_weight="0.75">

                            <TextView
                                android:id="@+id/cartCount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/cart_count"
                                android:textSize="@dimen/sp64" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight=".15"
                            android:text="@string/items"
                            android:textSize="@dimen/sp24" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>