<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/masterView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:src="@drawable/tulipfinal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <RelativeLayout
            android:id="@+id/box1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorAccent">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="text"
                    android:textSize="@dimen/sp15" />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/box2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:textColorHint="@color/colorAccent"
                app:passwordToggleEnabled="true"
                android:layout_alignParentLeft="true">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textSize="@dimen/sp15" />
            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>
        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp48"
            android:layout_margin="@dimen/dp8"
            android:background="@drawable/ripple_effect"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <!--<TextView-->
    <!--android:id="@+id/forgetPass"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_below="@id/loginButton"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:layout_marginTop="@dimen/dp30"-->
    <!--android:text="@string/forgot_password"-->
    <!--android:textColor="@android:color/holo_blue_dark"-->
    <!--android:textSize="@dimen/sp12" />-->

    <Button
        android:id="@+id/Login_SignBtn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp24"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="6dp"
        android:text="@string/noAcc"
        android:background="@android:color/transparent"
        android:textColor="@android:color/holo_blue_dark"
        android:textAllCaps="false"
        android:textSize="@dimen/sp16" />
</LinearLayout>
